[gd_scene load_steps=7 format=3 uid="uid://pyfpsm0s1bya"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_n5tf8"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="2_eb8lx"]
[ext_resource type="Texture2D" uid="uid://cq3jf024h2fuo" path="res://Assets/Card Designs/1. Easy (200x280)/sunset1.png" id="2_pi74s"]
[ext_resource type="Script" path="res://scripts/CardDown.gd" id="3_44wqf"]
[ext_resource type="Script" path="res://scripts/CardUp.gd" id="4_lp3ga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3a2k"]
size = Vector2(40, 56)

[node name="card" type="Area2D"]
script = ExtResource("1_n5tf8")
cardValue = ExtResource("2_pi74s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(20, 28)
shape = SubResource("RectangleShape2D_o3a2k")

[node name="ColorRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 200.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("2_pi74s")
expand_mode = 1

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("card", "initialState")]
script = ExtResource("2_eb8lx")
card = NodePath("..")
initialState = NodePath("CardDown")

[node name="CardDown" type="Node" parent="StateMachine" node_paths=PackedStringArray("card", "colorDisplay")]
script = ExtResource("3_44wqf")
card = NodePath("../..")
colorDisplay = NodePath("../../ColorRect")

[node name="CardUp" type="Node" parent="StateMachine" node_paths=PackedStringArray("card", "cardDisplay")]
script = ExtResource("4_lp3ga")
card = NodePath("../..")
cardDisplay = NodePath("../../ColorRect")

[connection signal="input_event" from="." to="StateMachine" method="_on_card_input_event"]
[connection signal="CardClicked" from="StateMachine/CardDown" to="." method="_on_card_down_card_clicked"]
[connection signal="Matched" from="StateMachine/CardUp" to="." method="_on_card_up_matched"]
